--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/zaraku/restaurant#readme",
   "devDependencies": {
     "css-loader": "^6.2.0",
+    "json-loader": "^0.5.7",
     "style-loader": "^3.2.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
