--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zaraku/restaurant.git"
+    "url": "git+https://github.com/renkode/restaurant.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/zaraku/restaurant/issues"
+    "url": "https://github.com/renkode/restaurant/issues"
   },
-  "homepage": "https://github.com/zaraku/restaurant#readme",
+  "homepage": "https://github.com/renkode/restaurant#readme",
   "devDependencies": {
     "css-loader": "^6.3.0",
     "json-loader": "^0.5.7",
